# CS2Predictor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/elo_systems/: conservative.toml  default.toml
configs/targets/: hltv_world_2026-02-16_top20.json
docs/: data_model.md  feature_prioritization.md  refactor_plan.md  team_elo_v1.md  team_glicko2_v1.md  team_openskill_v1.md
docs/ratings/: team_elo_v1.md  team_glicko2_v1.md
scripts/: rebuild_all_default_ratings.py  rebuild_ratings.py  rebuild_team_elo.py  rebuild_team_glicko2.py  rebuild_team_openskill.py  show_hltv_target_comparison.py  show_team_elo_top.py  show_team_glicko2_top.py  show_team_openskill_top.py  show_team_top.py
src/: db.py
src/domain/: __init__.py  common.py  config_base.py  pipeline.py  registry.py
src/elo/: __init__.py  system_config.py  team_elo.py
src/models/: __init__.py  event.py  system.py  team_elo.py
src/repositories/: __init__.py  base.py  common.py  repository.py  team_elo_repository.py
tests/: test_glicko2_system_config.py  test_map_specific_elo_system_config.py  test_map_specific_glicko2_system_config.py  test_map_specific_openskill_system_config.py  test_player_elo.py  test_player_glicko2.py  test_player_openskill.py  test_registry_player_systems.py  test_system_config.py  test_team_elo.py  test_team_glicko2.py  test_team_map_elo.py  test_team_map_glicko2.py  test_team_map_openskill.py  test_team_match_elo.py  test_team_match_glicko2.py  test_team_match_openskill.py  test_team_openskill.py
tests/elo/: test_system_config.py  (+1 more)
(+106 files in other folders)
