[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2predictor"
version = "0.1.0"
description = "CS2 match outcome modeling and feature engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "alembic>=1.13,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
